Add RPCS3 and SC Controller

--- a/pkg/haystack/gaming/PKGBUILD
+++ b/pkg/haystack/gaming/PKGBUILD
@@ -13,6 +13,8 @@ depends=(
     'winetricks'
     'protontricks'
     'pcsx2'
+    'rpcs3-bin'
     'citra-git'
     'citra-qt-git'
+    'sc-controller'
 )
