Add caprine to desktop packages

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -54,6 +54,7 @@ depends=(
     'python-pyperclip'
     'chromium-widevine'
     'telegram-desktop'
+    'caprine'
     'network-manager-applet'
     'networkmanager-openvpn'
     'nordvpn-bin'
