Add wireguard stuff to desktop packages

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -56,8 +56,12 @@ depends=(
     'telegram-desktop'
     'caprine'
     'network-manager-applet'
+    'openvpn'
     'networkmanager-openvpn'
     'nordvpn-bin'
+    'wireguard-dkms'
+    'wireguard-tools'
+    'networkmanager-wireguard-git'
     'udiskie'
     'simple-scan'
     'gtklp'
