--- a/pkg/haystack/base/PKGBUILD
+++ b/pkg/haystack/base/PKGBUILD
@@ -82,10 +82,12 @@ depends=(
 source=('sudoers.wheel')
 md5sums=('3d323c30d191855016f41a528bb0a7bb')
 
+rootdir=$PWD
+
 package() {
     # sudoers
-    install -Dm 0640 sudoers.wheel "$pkgdir/etc/sudoers.d/wheel"
+    install -Dm 0640 "$rootdir/sudoers.wheel" "$pkgdir/etc/sudoers.d/wheel"
 
     # systemd unit files
-    install -Dm 0644 systemd/* -t "$pkgdir/etc/systemd/system"
+    install -Dm 0644 "$rootdir/systemd/"* -t "$pkgdir/etc/systemd/system"
 }
