Make meta package dependencies runtime only

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -7,99 +7,101 @@ arch=('any')
 url="https://github.com/JonnyHaystack/arch-pkgs"
 license=('GPL')
 install=haystack-desktop.install
-depends=(
-    'haystack-base'
-    'xorg-server'
-    'xorg-xrandr'
-    'arandr'
-    'autorandr'
-    'xorg-xdpyinfo'
-    'xorg-xprop'
-    'xorg-xinput'
-    'xorg-setxkbmap'
-    'xorg-xmodmap'
-    'xorg-xlsfonts'
-    'ttf-dejavu'
-    'ttf-roboto'
-    'ttf-roboto-mono'
-    'wmctrl'
-    'xdotool'
-    'xsel'
-    'xclip'
-    'lightdm'
-    'lightdm-slick-greeter'
-    'lightdm-settings'
-    'arc-gtk-theme'
-    'papirus-icon-theme'
-    'lxappearance'
-    'qt5ct'
-    'qt5-styleplugins'
-    'i3-gaps'
-    'i3lock-color'
-    'i3-resurrect-git'
-    'i3tree-git'
-    'polybar-git'
-    'hideit.sh-git'
-    'unclutter'
-    'picom'
-    'dunst'
-    'rofi'
-    'rofi-calc'
-    'transset-df'
-    'alacritty'
-    'guake'
-    'qutebrowser'
-    'python-tldextract'
-    'python-pyperclip'
-    'chromium-widevine'
-    'telegram-desktop'
-    'caprine'
-    'network-manager-applet'
-    'openvpn'
-    'networkmanager-openvpn'
-    'nordvpn-bin'
-    'wireguard-dkms'
-    'wireguard-tools'
-    'networkmanager-wireguard-git'
-    'udiskie'
-    'simple-scan'
-    'gtklp'
-    'system-config-printer'
-    'transgui-gtk'
-    'transmission-cli'
-    'bitwarden-bin'
-    'pulseaudio'
-    'pulseaudio-zeroconf'
-    'paprefs'
-    'pavucontrol'
-    'alsa-lib'
-    'alsa-utils'
-    'gmrender-resurrect-git'
-    'tutanota-desktop-bin'
-    'todotxt'
-    'neofetch'
-    'zathura'
-    'zathura-pdf-mupdf'
-    'mpv'
-    'youtube-dl'
-    'feh'
-    'gifsicle'
-    'imagemagick'
-    'ffmpeg'
-    'maim'
-    'scrot'
-    'slop'
-    'yad'
-    'thunar'
-    'thunar-volman'
-    'redshift'
-    'kdeconnect'
-    'android-file-transfer'
-)
 
 rootdir=$PWD
 
 package() {
+    depends=(
+        'haystack-base'
+        'xorg-server'
+        'xorg-xrandr'
+        'arandr'
+        'autorandr'
+        'xorg-xdpyinfo'
+        'xorg-xprop'
+        'xorg-xinput'
+        'xorg-setxkbmap'
+        'xorg-xmodmap'
+        'xorg-xlsfonts'
+        'ttf-dejavu'
+        'ttf-roboto'
+        'ttf-roboto-mono'
+        'wmctrl'
+        'xdotool'
+        'xsel'
+        'xclip'
+        'lightdm'
+        'lightdm-slick-greeter'
+        'lightdm-settings'
+        'arc-gtk-theme'
+        'papirus-icon-theme'
+        'lxappearance'
+        'qt5ct'
+        'qt5-styleplugins'
+        'i3-gaps'
+        'i3lock-color'
+        'i3-resurrect-git'
+        'wmfocus'
+        'i3tree-git'
+        'polybar-git'
+        'hideit.sh-git'
+        'unclutter'
+        'picom'
+        'dunst'
+        'rofi'
+        'rofi-calc'
+        'transset-df'
+        'alacritty'
+        'guake'
+        'qutebrowser'
+        'python-tldextract'
+        'python-pyperclip'
+        'chromium-widevine'
+        'telegram-desktop'
+        'caprine'
+        'network-manager-applet'
+        'openvpn'
+        'networkmanager-openvpn'
+        'nordvpn-bin'
+        'wireguard-dkms'
+        'wireguard-tools'
+        'networkmanager-wireguard-git'
+        'udiskie'
+        'simple-scan'
+        'gtklp'
+        'system-config-printer'
+        'transgui-gtk'
+        'transmission-cli'
+        'bitwarden-bin'
+        'pulseaudio'
+        'pulseaudio-zeroconf'
+        'paprefs'
+        'pavucontrol'
+        'alsa-lib'
+        'alsa-utils'
+        'gmrender-resurrect-git'
+        'tutanota-desktop-bin'
+        'todotxt'
+        'neofetch'
+        'zathura'
+        'zathura-pdf-mupdf'
+        'mpv'
+        'youtube-dl'
+        'feh'
+        'gifsicle'
+        'imagemagick'
+        'ffmpeg'
+        'maim'
+        'scrot'
+        'slop'
+        'yad'
+        'thunar'
+        'thunar-volman'
+        'redshift'
+        'kdeconnect'
+        'android-file-transfer'
+    )
+
     # LightDM
     install -Dm 0644 "$rootdir/lightdm/lightdm.conf" "$pkgdir/etc/lightdm/lightdm.conf.haystack"
     install -Dm 0644 "$rootdir/lightdm/slick-greeter.conf" "$pkgdir/etc/lightdm/slick-greeter.conf.haystack"
@@ -110,7 +112,7 @@ package() {
     install -Dm 0755 "$rootdir/bin/set_sidetone.sh" "$pkgdir/usr/local/bin/set_sidetone.sh"
 
     # systemd unit files
-    install -Dm 0644 "$rootdir/systemd/set-sidetone.service" "$pkgdir/etc/systemd/system/set-sidetone.service"
+    install -Dm 0644 "$rootdir/systemd/"* -t "$pkgdir/etc/systemd/system"
 
     # udev rules
     install -Dm 0644 "$rootdir/udev/"* -t "$pkgdir/etc/udev/rules.d"
