Add nextcloud-client to desktop packages

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -101,6 +101,7 @@ package() {
         'redshift'
         'kdeconnect'
         'android-file-transfer'
+        'nextcloud-client'
     )
 
     # LightDM
