Add Google Noto fonts to desktop packages

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -26,6 +26,8 @@ package() {
         'ttf-dejavu'
         'ttf-roboto'
         'ttf-roboto-mono'
+        'noto-fonts'
+        'noto-fonts-emoji'
         'wmctrl'
         'xdotool'
         'xsel'
