Add python-stem for qutebrowser tor_identity

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -59,6 +59,7 @@ package() {
         'qutebrowser'
         'python-tldextract'
         'python-pyperclip'
+        'python-stem'
         'chromium-widevine'
         'telegram-desktop'
         'caprine'
