--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -70,6 +70,7 @@ package() {
         'wireguard-dkms'
         'wireguard-tools'
         'networkmanager-wireguard-git'
+        'tor'
         'udiskie'
         'simple-scan'
         'gtklp'
