Add rofimoji to desktop packages

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -53,6 +53,7 @@ package() {
         'dunst'
         'rofi'
         'rofi-calc'
+        'rofimoji'
         'transset-df'
         'alacritty'
         'guake'
