--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -124,6 +124,6 @@ package() {
     # udev rules
     install -Dm 0644 "$rootdir/udev/"* -t "$pkgdir/etc/udev/rules.d"
 
-    # XOrg config filres
+    # XOrg config files
     install -Dm 0644 "$rootdir/xorg/"* -t "$pkgdir/etc/X11/xorg.conf.d"
 }
