Add poweroff safety script

--- a/pkg/haystack/base/PKGBUILD
+++ b/pkg/haystack/base/PKGBUILD
@@ -93,4 +93,5 @@ package() {
     # bin files
     install -Dm 0755 "$rootdir/bin/reboot" "$pkgdir/usr/local/bin/reboot"
     install -Dm 0755 "$rootdir/bin/shutdown" "$pkgdir/usr/local/bin/shutdown"
+    install -Dm 0755 "$rootdir/bin/poweroff" "$pkgdir/usr/local/bin/poweroff"
 }
