Add inetutils to base packages

--- a/pkg/haystack/base/PKGBUILD
+++ b/pkg/haystack/base/PKGBUILD
@@ -54,6 +54,7 @@ package() {
         'ntfs-3g'
         'lvm2'
         'net-tools'
+        'inetutils'
         'wireless_tools'
         'networkmanager'
         'sudo'
