Add bluetooth packages to desktop package

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -72,6 +72,10 @@ package() {
         'wireguard-tools'
         'networkmanager-wireguard-git'
         'tor'
+        'bluez'
+        'bluez-tools'
+        'blueman'
+        'pulseaudio-bluetooth'
         'udiskie'
         'simple-scan'
         'gtklp'
