Add hplip to desktop packages

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -80,6 +80,7 @@ package() {
         'simple-scan'
         'gtklp'
         'system-config-printer'
+        'hplip'
         'transgui-gtk'
         'transmission-cli'
         'bitwarden-bin'
