Add lxqt-policykit to desktop packages

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -44,6 +44,7 @@ package() {
         'i3-gaps'
         'i3lock-color'
         'i3-resurrect-git'
+        'lxqt-policykit'
         'wmfocus'
         'i3tree-git'
         'polybar-git'
