Add pacman-contrib to base packages

--- a/pkg/haystack/base/PKGBUILD
+++ b/pkg/haystack/base/PKGBUILD
@@ -19,6 +19,7 @@ package() {
         'coreutils'
         'binutils'
         'util-linux'
+        'pacman-contrib'
         'procps-ng'
         'glibc'
         'file'
