Add python-watchdog to desktop for bookmark sync

--- a/pkg/haystack/desktop/PKGBUILD
+++ b/pkg/haystack/desktop/PKGBUILD
@@ -62,6 +62,7 @@ package() {
         'python-tldextract'
         'python-pyperclip'
         'python-stem'
+        'python-watchdog'
         'chromium-widevine'
         'telegram-desktop'
         'caprine'
